--- a/asset/css/main.css
+++ b/asset/css/main.css
@@ -41,6 +41,8 @@ h3 {
   color: #fff;
 }
 
+
+
 .parallax input[type="text"],
 .parallax input[type="text"]:hover,
 .parallax input[type="email"],
@@ -360,6 +362,11 @@ section {
 /*************************
 ********portfolio CSS*****
 **************************/
+
+section .#portafolio {
+  border-width:5px;  
+    border-style:ridge;
+    }
 
 #portfolio .container-fluid, 
 #portfolio .col-sm-3  {
@@ -971,4 +978,44 @@ ul.address {
 
 /*Presets*/
 
+
+  .popup {
+              background-color: #ffffff;
+              color: #888888;
+              height: 245px;
+              left: 100%;
+              padding: 20px;
+              position: fixed;
+              right: 30%;
+              top: 25%;
+              width: 550px;
+              z-index: 101;
+              -moz-box-shadow: 0px 0px 10px 1px #888888;
+              -webkit-box-shadow: 0px 0px 10px 1px #888888;
+              box-shadow: 0px 0px 10px 1px #888888;
+              border-radius:10px;
+              -moz-border-radius:10px;
+          }
+          
+          .overlay {
+              background: #000000;
+              bottom: 0;
+              left: 0;
+              position: fixed;
+              right: 0;
+              top: 0;
+              z-index: 100;
+              opacity:0.5;
+          }
+          
+          a.close {
+              background: url("cancel.png") repeat scroll left top transparent;
+              cursor: pointer;
+              float: right;
+              height: 26px;
+              left: 32px;
+              position: relative;
+              top: -33px;
+              width: 26px;
+          }
 
